cluster-go/lightspeed-benchmark/test-04/templates/wordle-deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  annotations:
    alpha.image.policy.openshift.io/resolve-names: '*'
    app.openshift.io/route-disabled: 'false'
  name: wordle
  namespace: ols-test-04
  labels:
    app: wordle
    app.kubernetes.io/component: wordle
    app.kubernetes.io/instance: wordle
    app.kubernetes.io/name: wordle
    app.openshift.io/runtime: nodejs
    app.openshift.io/runtime-namespace: ols-test-04
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wordle
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: wordle
        deployment: wordle
      annotations:
        openshift.io/generated-by: OpenShiftWebConsole
    spec:
      containers:
        - name: wordle
          image: 'quay.io/rh_ee_cschmitz/wordle:latest'
          ports:
            - containerPort: 3000
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
