cluster-go/lightspeed-benchmark/test-04/templates/wordle-service.yaml
---

apiVersion: v1
kind: Service
metadata:
  name: wordle
  namespace: ols-test-04
spec:
  selector:
    app: poodle
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 4000
